feat: add movies crud
